test/errors/default_values_error/zs/wrong_bool_initializer_error.zs
package wrong_bool_initializer_error;

struct WrongBoolInitializer
{
    bool    wrongBoolInitializer = 1;
};
